autoprefix style.prod.css, fix overflow, fix odd comment

--- a/css/style.prod.css
+++ b/css/style.prod.css
@@ -1,14 +1,14 @@
 
 @font-face {
     font-family: 'iskoola pota';
-    url(../fonts/ISKPOTA.TTF) format('ttf');
+    src: url(../fonts/ISKPOTA.TTF) format('ttf');
 }
 @font-face {
     font-family: 'iskoola pota';
-    url(../fonts/ISKPOTAB.TTF) format('ttf');
+    src: url(../fonts/ISKPOTAB.TTF) format('ttf');
 }
 @font-face {
-    url(../fonts/SYLFAEN.TTF) format('ttf');
+    src: url(../fonts/SYLFAEN.TTF) format('ttf');
 }
 
 
@@ -657,8 +657,7 @@ header {
 }
 .about {
     background: #ffffff;
-    padding: 35px 25px;
-    height: 290px;
+    padding: 35px 25px 5px 25px;
 }
 .salon-photos {
     background: #ffffff;
@@ -705,10 +704,17 @@ header {
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
     align-items: flex-start;
     padding: 0 25px;
 }
 .footer-flex-bottom {
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    -ms-grid-row-align: flex-end;
     align-items: flex-end;
 }
 .footer-flex-item {
@@ -896,6 +902,9 @@ textarea {
 .comments-page .comment,
 .comments-wrapper .comment {
     padding-top: 0;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
     flex: 1;
 }
 .breadcrumbs ul {
